--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,7 @@
   html {
     font-family: Poppins, system-ui, sans-serif;
     background-color: #FFFFFF !important;
+    scroll-behavior: smooth;
   }
   body {
     height: 100vh !important;
@@ -15,5 +16,6 @@
     margin: 0;
     background-color: #FFFFFF !important;
     overflow-x: hidden;
+    scroll-behavior: smooth !important;
   }
 }
