--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900;&display=swap"); */
+ @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900;&display=swap");
 
 @layer base {
   html {
     font-family: Poppins, system-ui, sans-serif;
-    background-color: #FFFFFF !important;
+    background-color:#F9F9FB !important;
     scroll-behavior: smooth;
   }
   body {
@@ -18,4 +18,25 @@
     overflow-x: hidden;
     scroll-behavior: smooth !important;
   }
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 20px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c38af8; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #c98fff; 
 }
